--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;800&family=Poppins:wght@400;500;600;700&display=swap");
 
 :root {
-  --primary-color: #3862ed;
-  --primary-color-dark: #3e31d2;
+  --primary-color: hsl(26 98% 56% / 1);
+  --primary-color-dark: hsl(22, 100%, 50%);
   --primary-color-light: #e5f1f4;
   --text-dark: #0f172a;
   --text-light: #64748b;
@@ -18,6 +18,23 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+tr {
+  text-align: center;
+}
+
+span.ant-table-column-title {
+  text-align: center;
+}
+
+th.ant-table-cell {
+  background: #DCDBDB !important;
+  font-weight: 600 !important;
+}
+
+th.ant-table-cell {
+  text-align: center !important;
 }
 
 .icon-blue {
@@ -66,6 +83,7 @@
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
+  font-weight: 600;
 }
 
 .btn:hover {
@@ -88,10 +106,10 @@ body {
 nav {
   max-width: var(--max-width-1200);
   margin: auto;
-  padding: 1.2rem 1rem;
+  padding: 1rem 1rem;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .nav__links {
@@ -100,6 +118,7 @@ nav {
   display: flex;
   align-items: center;
   gap: 2rem;
+  margin-left: 3rem;
 }
 
 .link a {
@@ -381,19 +400,28 @@ nav {
   background: #2caeba;
 }
 
+.program-banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  background: #2caeba;
+}
+
 .home-banner {
   text-align: left;
   padding: 0 3rem;
 }
 
-.home-banner h1 {
+.home-banner, .program-banner h1 {
   text-transform: uppercase;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .home-btn-wrapper {
   display: inline-flex;
   flex-direction: column;
-  margin-top: 4rem;
+  margin-top: 2rem;
   gap: 1rem;
 }
 
@@ -406,13 +434,50 @@ nav {
   border-radius: 2px;
 }
 
+.fixed-nav-bar {
+  background-color: #D9D9D9;
+}
+
+.card-img {
+  width: 220px;
+  height: 140px;
+  
+}
+
 @media screen and (min-width: 768px) {
   .home {
-    background: linear-gradient(rgb(44, 174, 186, 0.7), rgba(0, 0, 0, 0.9)),
+    background: linear-gradient(rgba(34, 36, 36, 0.7), rgba(0, 0, 0, 0.2)),
       url("./assets/images/banner.png") center/cover no-repeat;
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+      padding: 4rem 0 0 3rem
   }
   .home-banner {
     padding: 0;
+  }
+
+  .program-banner {
+    background: linear-gradient(rgba(34, 36, 36, 0.7), rgba(0, 0, 0, 0.2)),
+      url("./assets/images/programBanner.png") center/cover no-repeat;
+      position: relative;
+  }
+
+  .program-title {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    white-space: nowrap;
+  }
+
+  .program-desc {
+    position: absolute;
+    bottom: -10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
   }
 }
 
@@ -479,16 +544,7 @@ nav {
   font-size: 16px;
 }
 
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+.dropdown-items:hover {
+  color: var(--primary-color);
 }
 
-.add-product-InputCSS {
-  @apply mt-1 block py-2.5 px-4 w-full rounded-md bg-gray-100 border-gray-300 shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm;
-}
-
-.add-product-btn {
-  @apply mt-5 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
-}
