--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -444,6 +444,18 @@ nav {
   
 }
 
+.btn-brand {
+  border: 2px solid #000000;
+  background: transparent;
+  padding: 8px 12px;
+  color: #000000;
+  cursor: pointer;
+  border-radius: 2px;
+  width: 100%;
+  align-items: center;
+  border-radius: 5px;
+}
+
 @media screen and (min-width: 768px) {
   .home {
     background: linear-gradient(rgba(34, 36, 36, 0.7), rgba(0, 0, 0, 0.2)),
