--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -29,7 +29,7 @@ span.ant-table-column-title {
 }
 
 th.ant-table-cell {
-  background: #DCDBDB !important;
+  background: #dcdbdb !important;
   font-weight: 600 !important;
 }
 
@@ -346,7 +346,6 @@ nav {
   color: var(--text-light);
 }
 
-
 .footer__container {
   max-width: var(--max-width-1200);
   display: grid;
@@ -413,7 +412,8 @@ nav {
   padding: 0 3rem;
 }
 
-.home-banner, .program-banner h1 {
+.home-banner,
+.program-banner h1 {
   text-transform: uppercase;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
@@ -435,13 +435,12 @@ nav {
 }
 
 .fixed-nav-bar {
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
 }
 
 .card-img {
   width: 220px;
   height: 140px;
-  
 }
 
 .btn-brand {
@@ -462,14 +461,34 @@ nav {
   padding: 10px;
 }
 
+.dashboard-layout {
+  padding: 10px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  padding: 10px;
+  border-radius: 8px;
+  margin: 10px;
+}
+
+.dashboard-title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.dashboard-back {
+  font-weight: 600;
+}
+
 @media screen and (min-width: 768px) {
   .home {
     background: linear-gradient(rgba(34, 36, 36, 0.7), rgba(0, 0, 0, 0.2)),
       url("./assets/images/banner.png") center/cover no-repeat;
-      display: flex;
-      justify-content: flex-start;
-      align-items: flex-start;
-      padding: 4rem 0 0 3rem
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 4rem 0 0 3rem;
   }
   .home-banner {
     padding: 0;
@@ -478,7 +497,7 @@ nav {
   .program-banner {
     background: linear-gradient(rgba(34, 36, 36, 0.7), rgba(0, 0, 0, 0.2)),
       url("./assets/images/programBanner.png") center/cover no-repeat;
-      position: relative;
+    position: relative;
   }
 
   .program-title {
@@ -496,7 +515,21 @@ nav {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    width: 1000px;
+  }
+
+  .dashboard-layout {
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+      rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    padding: 12px;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    max-width: var(--max-width-1200);
+    margin: auto;
+    margin-top: 20px;
+  }
+
+  .dashboard-title {
+    font-size: 20px;
   }
 }
 
@@ -556,7 +589,6 @@ nav {
   .banner__container {
     grid-template-columns: repeat(1, 1fr);
   }
-  
 }
 
 .nav__icons span a.dropdown-items {
@@ -566,4 +598,3 @@ nav {
 .dropdown-items:hover {
   color: var(--primary-color);
 }
-
