--- a/frontend/src/pages/LoyaltyCard/LoyaltyCard.css
+++ b/frontend/src/pages/LoyaltyCard/LoyaltyCard.css
@@ -5,4 +5,134 @@
   border-radius: 20px;
   width: 600px;
   height: 240px;
+  background: #eeeeee;
+}
+.card-text {
+  color: var(--primary-color);
+  background: #d9d9d9;
+  padding: 10px 20px;
+  border-radius: 0 6px 6px 0;
+  position: absolute;
+  top: 10%;
+  left: 0%;
+  font-size: 24px;
+}
+
+.card-name {
+  position: absolute;
+  right: 4%;
+  color: #6c6a68;
+  font-style: italic;
+  font-size: 30px;
+  top: 12%;
+}
+
+.card-number {
+  position: absolute;
+  left: 3%;
+  top: 42%;
+  color: #6c6a68;
+  font-weight: 700;
+  font-size: 30px;
+}
+
+.img-logo {
+  height: 186px;
+  width: 214px;
+  position: absolute;
+  right: 1%;
+  bottom: -5%;
+}
+
+.barcode {
+  position: absolute;
+  left: 4%;
+  bottom: 4%;
+}
+
+@media screen and (max-width: 640px) {
+  .card-layout {
+    width: 500px;
+    height: 200px;
+  }
+  .img-logo {
+    height: 120px;
+    width: 120px;
+  }
+
+  .card-number {
+    font-size: 20px;
+    top: 48%;
+  }
+
+  .barcode {
+    left: 2%;
+  }
+
+  .card-text {
+    font-size: 18px;
+    padding: 4px 8px;
+  }
+
+  .card-name {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .card-layout {
+    width: 400px;
+    height: 200px;
+  }
+  .img-logo {
+    height: 120px;
+    width: 120px;
+  }
+
+  .card-number {
+    font-size: 20px;
+    top: 48%;
+  }
+
+  .barcode {
+    left: 2%;
+  }
+
+  .card-text {
+    font-size: 18px;
+    padding: 4px 8px;
+  }
+
+  .card-name {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .card-layout {
+    width: 340px;
+    height: 200px;
+  }
+  .img-logo {
+    height: 120px;
+    width: 120px;
+  }
+
+  .card-number {
+    font-size: 20px;
+    top: 48%;
+  }
+
+  .barcode {
+    left: 2%;
+  }
+
+  .card-text {
+    font-size: 18px;
+    padding: 4px 8px;
+  }
+
+  .card-name {
+    font-size: 18px;
+  }
 }
